# pcb-map

./: .dockerignore  .gitignore  Dockerfile  README.md
design/: fp-lib-table  map_board.kicad_pcb  map_board.kicad_pro  smoothed_map.xcf
design/wiring_project/: esp32_devkit.kicad_mod  map_lights.kicad_pro  my_sym.kicad_sym
design/wiring_project/light_control/: fp-lib-table  light_control.kicad_pcb  light_control.kicad_pro  light_control.kicad_sch
design/wiring_project/light_control/my_foot.pretty/: esp32_devkit.kicad_mod
example_data/: demo_locations.json
firmware/: platformio.ini
firmware/simulation/: CMakeLists.txt  matrix_sim.cpp
firmware/simulation/mock/: Arduino.h  ESP32-HUB75-MatrixPanel-I2S-DMA.cpp  ESP32-HUB75-MatrixPanel-I2S-DMA.h  esp_log.h
firmware/src/: main.cpp  matrix_interface.cpp  matrix_interface.h  matrix_sprite_ctrl.cpp  matrix_sprite_ctrl.h  mqtt_client.cpp  mqtt_client.h  mqtt_config.cpp  mqtt_config.h  panel_test.cpp.back
python/: device_setup.py  pyproject.toml
python/pcb_map/: __init__.py  cli_types.py  constants.py  control_server.py  device_setup.py  google_maps_route.py  mqtt_client.py  open_route_service.py  route_utils.py  shared_location_interface.py
scripts/: docker_run.sh  send_cookie.sh  upload_firmware.sh
