[project]
name = "pcb-map-scripts"
version = "0.1.0"
description = "Scripts for PCB map device control and setup"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer",
    "paho-mqtt",
    "zeroconf",
    "pywifi",
    "pillow>=12.2.0",
    "locationsharinglib>=5.0.3",
    "haversine>=2.9.0",
]

[project.scripts]
device-setup = "pcb_map.device_setup:app"
control-server = "pcb_map.control_server:app"

[tool.uv]
package = true

[tool.setuptools]
packages = ["pcb_map"]
